--- a/admin/dashboard.css
+++ b/admin/dashboard.css
@@ -57,7 +57,7 @@ th {
 /* Sidebar styles */
 .sidebar {
     height: 100%;
-    width: 250px;
+    width: 200px;
     position: fixed;
     top: 0;
     left: 0;
@@ -65,20 +65,25 @@ th {
     padding-top: 20px;
 }
 
-.sidebar a {
-    padding: 10px 15px;
-    text-decoration: none;
-    font-size: 20px;
-    color: white; /* Text color for sidebar links */
-    display: block;
-}
-
-.sidebar a:hover {
-    background-color: #555; /* Background color on hover */
-}
-
 /* Content area styles */
 .content {
     margin-left: 250px; /* Adjust the margin to make space for the sidebar */
     padding: 20px;
 }
+
+.layout {
+    width: 1366px;
+    height: 768px;
+  
+    display: grid;
+    grid:
+      "sidebar body" 1fr
+      / auto 1fr;
+    gap: 8px;
+  }
+  
+  .sidebar { grid-area: sidebar; }
+  .body { grid-area: body; }
+
+
+  
