--- a/login.css
+++ b/login.css
@@ -134,6 +134,11 @@
       background-color: #FFA500; /* Change the hover color to a slightly different shade of orange */
   }
 
+  .signup-link {
+    margin-top: 50px;
+    color: white;
+  }
+  
   .signup-link a {
     color: orange; /* Change the text color to orange */
     text-decoration: none;
