--- a/forgot-password.css
+++ b/forgot-password.css
@@ -8,6 +8,10 @@
   /* Define global font styles */
   body {
     font-family: Arial, sans-serif;
+    background-image: url('./images/KL.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
