--- a/admin/dashboard.css
+++ b/admin/dashboard.css
@@ -60,7 +60,7 @@ th {
 
 /* Style the navbar (you can add more styles as needed) */
 .navbar {
-    background-color: #0074D9;
+    background-color: #1B0900; /* Change the background color here */
     color: white;
     padding: 10px;
 }
