--- a/pages/calendar.css
+++ b/pages/calendar.css
@@ -34,7 +34,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #01a9c1;
+            background-color: #808080;
             color: white;
             padding: 25px;
             font-size: 24px;
